# Visibility is restricted to because db-contrib-tool downloads binaries
# from external sources at build time.
# Non-hermetic external downloads should not influence the core build graph.
package(default_visibility = [
    "//:__pkg__",
])

sh_binary(
    name = "db-contrib-tool",
    srcs = ["db_contrib_tool.sh"],
    data = [
        "//bazel/resmoke:resmoke_mongo_version",
        "//buildscripts:resmoke",
        "@db_contrib_tool//:db-contrib-tool",
    ],
)
