# Bazel build definitions used to test bazel features during build system development.

load("//bazel:mongo_src_rules.bzl", "mongo_cc_binary", "mongo_cc_unit_test")

package(default_visibility = ["//visibility:public"])

mongo_cc_binary(
    name = "unit_test",
    srcs = ["unit_test.cpp"],
)

# Test for verifying test_wrapper.sh timeout behavior and coredump generation.
# This test intentionally hangs to trigger the timeout mechanism in test_wrapper.sh.
# When run via the _ci_wrapper target, it should:
#   1. Get killed by SIGABRT after the configured timeout
#   2. Generate a coredump file saved to TEST_UNDECLARED_OUTPUTS_DIR
#
# Usage:
#   bazel test --config=remote_test //buildscripts/bazel_testbuilds:ci_wrapper_timeout_test_ci_wrapper
mongo_cc_unit_test(
    name = "ci_wrapper_timeout_test",
    srcs = ["ci_wrapper_timeout_test.cpp"],
    tags = [
        # Tag to indicate this test is expected to timeout and be killed
        "ci_wrapper_integration_test",
        # Manual tag to prevent this from running in normal test suites
        # since it's designed to fail/timeout
        "manual",
    ],
)
